@@ -1,3 +1,12 @@
+2016-04-07  Jon Davis  <jond@apple.com>
+
+        Add Web Animations API to Feature Status Page
+        https://bugs.webkit.org/show_bug.cgi?id=156360
+
+        Reviewed by Timothy Hatcher.
+
+        * features.json:
+
 2016-04-07  Saam barati  <sbarati@apple.com>
 
         Invalid assertion inside DebuggerScope::getOwnPropertySlot
